--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -14,20 +14,20 @@
 
     <div class="timer">
       <div class="field">
-        <span class="value" data-days>00:</span>
-        <!-- <span class="label">Days</span> -->
+        <span class="value" data-days>00</span>
+        <span class="label">:</span>
       </div>
       <div class="field">
-        <span class="value" data-hours>00:</span>
-        <!-- <span class="label">Hours</span> -->
+        <span class="value" data-hours>00</span>
+        <span class="label">:</span>
       </div>
       <div class="field">
-        <span class="value" data-minutes>00:</span>
-        <!-- <span class="label">Minutes</span> -->
+        <span class="value" data-minutes>00</span>
+        <span class="label">:</span>
       </div>
       <div class="field">
         <span class="value" data-seconds>00</span>
-        <!-- <span class="label">Seconds</span> -->
+        <span class="label">:</span>
       </div>
     </div>
 
