--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -15,22 +15,28 @@
     <div class="timer">
       <div class="field">
         <span class="value" data-days>00</span>
-        <span class="label">Days</span>
+
       </div>
+      <span>:</span>
       <div class="field">
         <span class="value" data-hours>00</span>
-        <span class="label">Hours</span>
+
       </div>
+      <span>:</span>
       <div class="field">
         <span class="value" data-minutes>00</span>
-        <span class="label">Minutes</span>
+
       </div>
+      <span>:</span>
       <div class="field">
         <span class="value" data-seconds>00</span>
-        <span class="label">Seconds</span>
+
       </div>
     </div>
 
     <script src="js/02-timer.js" type="module"></script>
   </body>
 </html>
+
+
+
